Up2Go-travelexpenses/src/objects/Travel__c.object
<CustomObject>
    <description>Records of business travels.</description>
    <fields>
        <fullName>chk_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dtm_End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtm_Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcur_Reimbursement__c</fullName>
        <formula>rsum_ReimbursableExpenses__c  +  rsum_PerDiems__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reimbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rsum_PerDiems__c</fullName>
        <label>Total per Diems</label>
        <summarizedField>Expense__c.cur_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>per Diem</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.mdr_Travel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rsum_ReimbursableExpenses__c</fullName>
        <label>Reimbursable Expenses</label>
        <summarizedField>Expense__c.cur_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Flight, Accommodation, Train Ride, Private Vehicle Ride, Miscellaneous, Sea Travel, Entertainment, Rental Vehicle, Company Vehicle Ride</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.pkl_Reimbursement__c</field>
            <operation>equals</operation>
            <value>&quot;I paid for this, please reimburse me.&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.mdr_Travel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rsum_TotalExpenses__c</fullName>
        <label>Total Expenses</label>
        <summarizedField>Expense__c.cur_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Flight, Accommodation, Train Ride, Private Vehicle Ride, Miscellaneous, Sea Travel, Entertainment, Rental Vehicle, Company Vehicle Ride</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.mdr_Travel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>txa_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txt_Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Travel</label>
    <listViews>
        <fullName>AllTravels</fullName>
        <columns>NAME</columns>
        <columns>dtm_Start__c</columns>
        <columns>dtm_End__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>chk_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Travels</label>
    </listViews>
    <listViews>
        <fullName>ApprovedTravels</fullName>
        <columns>NAME</columns>
        <columns>dtm_Start__c</columns>
        <columns>dtm_End__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>chk_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>chk_Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approved Travels</label>
    </listViews>
    <listViews>
        <fullName>NotApprovedTravels</fullName>
        <columns>NAME</columns>
        <columns>dtm_Start__c</columns>
        <columns>dtm_End__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>chk_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>chk_Approved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Approved Travels</label>
    </listViews>
    <nameField>
        <label>Travel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>